# git-additions

./: .flake8  .gitignore  .noserc  .travis.yml  README.md  README.rst  requirements.txt  setup.cfg  setup.py
git_additions/additions/duration/: duration.py
git_additions/additions/logs/: print_log.py
git_additions/additions/stats/: stats.py
git_additions/additions/users/: users.py
git_additions/logs/: logs.py
git_additions/reports/duration/: __init__.py  duration.py
git_additions/reports/logs/: __init__.py  logs.py  print_log.py
git_additions/reports/stats/: __init__.py  stats.py
git_additions/reports/users/: __init__.py  users.py
git_reports/: __init__.py  commandline.py
git_reports/reports/: __helpers.py
git_reports/reports/duration/: duration.py
git_reports/reports/exporter/: csv_exporter.py
git_reports/reports/log/: log.py  print_log.py
git_reports/reports/stats/: __init__.py  stats.py
git_reports/reports/users/: users.py
requirements/: dev.txt  test.txt
