[metadata]
name = git-reports
description = A command line tool to generate various reports from git repository.
url = https://github.com/eendroroy/git-reports
author = indrajit
author_email = eendroroy@gmail.com
license = MIT
classifiers = Development Status :: 4 - Beta
              Intended Audience :: End Users/Desktop
              License :: OSI Approved :: MIT License
              Programming Language :: Python :: 3
platform = any
install_requires = pygit2
packages = git_reports
           git_reports.reports
           git_reports.reports.exporter
           git_reports.reports.log
           git_reports.reports.stats

[egg_info]
tag_date = false

[aliases]
release = egg_info -RDb ''
upload = upload --sign --identity=46343630

[bdist_wheel]
universal = 1
