[metadata]
name = git-additions
description = Git additions.
url = https://github.com/eendroroy/git-additions
author = indrajit
author_email = eendroroy@gmail.com
license = MIT
platform = any

[egg_info]
tag_date = false

[aliases]
release = egg_info -RDb ''
upload = upload --sign --identity=46343630

[bdist_wheel]
universal = 1
